Updating Old File for core commit

--- a/c-legacy-releases/2023/09132023.md
+++ b/c-legacy-releases/2023/09132023.md
@@ -1,14 +1,15 @@
 ---
-title: 版本注意事項 - 2023 年 9 月
+title: 發行說明 - 2023 年 9 月
 description: 閱讀 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明。了解有關 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
 doc-type: release notes
 last-update: August 2023
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: 8063c38404bba27e042db256fe4df8cb0e86e60f
-workflow-type: tm+mt
+exl-id: f56478de-79d0-4bfe-9468-e6f6619dd814
+source-git-commit: f2bfa149c00269a0f6f253724249ec162cc60565
+workflow-type: ht
 source-wordcount: '7206'
-ht-degree: 96%
+ht-degree: 100%
 
 ---
 
@@ -32,7 +33,7 @@ ht-degree: 96%
 
 上次更新日期：**2023 年 9 月 28 日**
 
-* [[!DNL Experience League] 活動和更新](#events) (已更新： **9月28日**)
+* [[!DNL Experience League] 活動與最新訊息](#events) (更新：**9 月 28 日**)
 * [Adobe 的認證](#certification)
 * [[!DNL Adobe System Status]](#status)
 * [[!DNL Experience Cloud] 介面與管理](#ecloud)
@@ -47,7 +48,7 @@ ht-degree: 96%
 * [[!DNL Adobe Commerce]](#commerce)
 * [[!DNL Adobe Target]](#target)
 * [[!DNL Adobe Campaign]](#ac)
-* [[!DNL Journey Optimizer]](#journey-opt) (已更新 **9月28日**)
+* [[!DNL Journey Optimizer]](#journey-opt) (更新：**9 月 28 日**)
 * [[!DNL Journey Orchestration]](#journey-orch)
 * [[!DNL Marketo Engage]](#marketo)
 * [[!DNL Workfront]](#workfront)
@@ -63,10 +64,10 @@ ht-degree: 96%
 
 了解 Experience League 上的精彩活動。 若要向 Adobe 產品專家學習、與之互動或獲得解答，這是您絕佳的選擇！
 
-| 已發佈 | 應用程式 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |---------- |
 | 2023 年 9 月 | Experience Cloud | [設定有效的 Audience Activation 策略](https://experienceleague.adobe.com/docs/events/adobe-customer-success-webinar-recordings/2023/audience-activation.html?lang=zh-Hant) | 客戶成功網路研討會 | 了解資料管理策略的重要性、Adobe Audience Manager 概觀和功能、Adobe Audience Manager 使用案例、制定資料管理策略的行動計劃 |
-| 2023 年夏季 | Experience Cloud | [Experience Cloud 應用程式的整合教學課程首頁](https://experienceleague.adobe.com/docs/integrations-learn/experience-cloud/overview.html) | 影片 | 瞭解最常見的 Experience Cloud 應用程式整合。您可依照[解決方案](https://experienceleague.adobe.com/docs/integrations-learn/experience-cloud/solution-categories/overview.html?lang=zh-Hant)或[應用程式](https://experienceleague.adobe.com/docs/integrations-learn/experience-cloud/integrations-between-applications/overview.html?lang=zh-Hant)瀏覽整合教學課程。此內容會經常更新，因此請經常回來查看。 |
+| 2023 年夏季 | Experience Cloud | [Experience Cloud 應用程式的整合教學課程首頁](https://experienceleague.adobe.com/docs/integrations-learn/experience-cloud/overview.html) | 影片 | 了解最常見的 Experience Cloud 應用程式整合。您可依照[解決方案](https://experienceleague.adobe.com/docs/integrations-learn/experience-cloud/solution-categories/overview.html?lang=zh-Hant)或[應用程式](https://experienceleague.adobe.com/docs/integrations-learn/experience-cloud/integrations-between-applications/overview.html?lang=zh-Hant)瀏覽整合教學課程。此內容會經常更新，因此請經常回來查看。 |
 
 {style="table-layout:auto"}
 
@@ -74,19 +75,19 @@ ht-degree: 96%
 
 +++即將推出的 Experience League 活動
 
-* **[!DNL ANALYTICS]** |網路研討會 | _利用Adobe Analytics探索並提供可行的深入分析_ | **10月5日上午9:00 （英國夏令時間）** | [註冊](https://adobeanalyticsemea2023.experienceleague.adobeevents.com/)
+* **[!DNL ANALYTICS]** | 網路研討會 | _使用 Adob&#x200B;&#x200B;e Analytics 探索並提供可操作分析_ | **10 月 5 日上午 9:00 (英國夏令時間)** | [報名](https://adobeanalyticsemea2023.experienceleague.adobeevents.com/)
 
-* **[!DNL WORKFRONT]** |網路研討會 | _Adobe Workfront 23.10的新增功能_ | **太平洋時間10月5日上午7:00** | [註冊](https://webinars.on24.com/adobe_workfront/whatsnewin2310?partnerref=EXL)
+* **[!DNL WORKFRONT]** | 網路研討會 | _Adobe Workfront 23.10 有哪些新增功能？_ | **10 月 5 日上午 7:00 (太平洋時間)** | [報名](https://webinars.on24.com/adobe_workfront/whatsnewin2310?partnerref=EXL)
 
-* **[!DNL EXPERIENCE MANAGER]** |網路研討會 | _濃縮咖啡與Experience Manager：升級至Dynamic Media_ | **10月5日下午1:00 （東部時間）** | [註冊](https://attendee.gotowebinar.com/register/401473910088026710?source%3CExL)
+* **[!DNL EXPERIENCE MANAGER]** | 網路研討會 | _Espressos 與 Experience Manager：升級至 Dynamic Media_ | **10 月 5 日下午 1:00 (美國東部時間)** | [報名](https://attendee.gotowebinar.com/register/401473910088026710?source%3CExL)
 
-* **[!DNL WORKFRONT]** |客戶工作坊 | _詢問專家：使用Workfront Fusion自動化您的工作流程_ | **10月5日上午11:00 （北美山區時區）** | [註冊](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,aYVhAxfDTEaHWan3DDKAJg,hP4GoDgz30K_R39XZWjjfQ,6wmf7dtjHkG6osxVzGe7nQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
+* **[!DNL WORKFRONT]** | 客戶研討會 | _諮詢專家：透過 Workfront Fusion 實現工作流程自動化_ | **10 月 5 日上午 11:00 (美國山區時間)** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,aYVhAxfDTEaHWan3DDKAJg,hP4GoDgz30K_R39XZWjjfQ,6wmf7dtjHkG6osxVzGe7nQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
 
 * **[!DNL WORKFRONT]** | 社群活動 | _交流：行銷和創意方面的管理員閒談_ | **北美山區時間 10 月 6 日上午 10:00** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,1qnTSsu1BE6bJ4ijFsYafg,COdPeWL3z0qsME9nhjnRwg,GEPFgV3sAkazC0HNeX4Qiw,MfXhfQkRaEeNxpVhAjrevw,etCOBCAjk0iAVD0DNRskXQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
 
 * **[!DNL WORKFRONT]** | 客戶研討會 | _管理員基本知識：讓您的使用者使用 Workfront_ | **北美山區時間 10 月 17 日上午 9:00** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,1qnTSsu1BE6bJ4ijFsYafg,COdPeWL3z0qsME9nhjnRwg,omfk3au070S9BM8uw0Q-eQ,hQB5-0lLTEqbiy3szpaQ7Q,IAorw9UUG0Kzb9zZNhCeEA?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
 
-* **[!DNL AEM]** 和 **[!DNL COMMERCE]** |開發人員直播 | _內容與商務：深入探討 [!UICONTROL Edge遞送服務]、 Headless功能、擴充性、可組合性和生產力工具_ | **11月6日上午9:00 （北美山區時區）** | [註冊](https://developerevents.adobe.com/events/details/adobe-developer-events-developer-experience-presents-adobe-developers-live-content-and-commerce/?code=release)
+* **[!DNL AEM]** 和 **[!DNL COMMERCE]** | Developers Live | _Content and Commerce：深入探討 [!UICONTROL Edge Delivery Services]、Headless 功能、擴充性、可組合性和生產力工具_ | **11 月 6 日上午 9:00 (北美山區時區)** | [報名](https://developerevents.adobe.com/events/details/adobe-developer-events-developer-experience-presents-adobe-developers-live-content-and-commerce/?code=release)
 
 查看全部[即將舉行的活動](https://experienceleague.adobe.com/events/)或瀏覽[活動錄影](https://experienceleague.adobe.com/docs/events/experience-league-recorded-events/overview.html)。您可以使用左側導覽並按系列類型和應用來查詢活動錄影內容。
 
@@ -130,7 +131,7 @@ ht-degree: 96%
 
 +++詳細資訊
 
-有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html) (包含[!UICONTROL 客戶屬性], [!DNL Experience Cloud Assets]和[!UICONTROL 對象])。
+有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 對象])。
 
 +++
 
@@ -148,7 +149,7 @@ ht-degree: 96%
 
 針對 Adobe [!DNL Experience Platform] 發佈的新影片、教學課程或課程。
 
-| 已發佈 | 應用程式 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | ----------| ---------- | ---------- | ---------- |---------- |
 | 2023 年 9 月 | Privacy Service | [Privacy Service 簡介](https://experienceleague.adobe.com/docs/platform-learn/tutorials/privacy/introduction-to-privacy-services.html?lang=zh-Hant) | 多部影片 | 了解隱私權法規及其對資料操作的影響。同時也了解 [!UICONTROL Privacy Service] 如何因應這些挑戰。檢視 [!DNL Experience Platform] 教學課程中「隱私權與安全性」部分的最新影片。 |
 | 2023 年 9 月 | 管理 | [設定以屬性為基礎的存取控制](https://experienceleague.adobe.com/docs/platform-learn/tutorials/admin/configure-attribute-based-access-control.html) | 影片 | 了解如何配置以屬性為基礎的存取控制，以限制對特定 [!DNL Experience Platform] 資源的存取。 |
@@ -165,7 +166,7 @@ ht-degree: 96%
 
 針對 Adobe [!DNL Real-Time Customer Data Platform] 發佈的新影片、教學課程或課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | ----------| ---------- | ---------- |---------- |
 | 2023 年 9 月 | [使用合作夥伴輔助的訪客識別，為未知的訪客提供個人化的現場體驗](https://experienceleague.adobe.com/docs/platform-learn/tutorials/partner-data-support/unknown-visitor-personalization-partner-data.html) | 影片 | 了解如何從 [!DNL Experience Platform] [!UICONTROL Web SDK] 收集第三方屬性，並使用合作夥伴輔助的訪客識別功能，為未知的訪客提供個人化的現場體驗。 |
 | 2023 年 9 月 | [將合作夥伴屬性新增至 Real-Time CDP 中的第一方設定檔](https://experienceleague.adobe.com/docs/platform-learn/tutorials/partner-data-support/partner-enrichment-partner-data.html) | 影片 | 了解如何將合作夥伴屬性新增至您的第一方設定檔，以透過 [!DNL Real-Time CDP] 中的其他管道擴大觸及範圍。 |
@@ -198,7 +199,7 @@ ht-degree: 96%
 
 專為 Adobe[!DNL Analytics] 發佈的新影片教學課程、文章和其他課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 9 月 | [使用長條圖解鎖深入分析：運用 Analytics 超越平均水平](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/visualizations/unlocking-insights-with-histograms.html?lang=zh-Hant) | 影片 | 探索長條圖在分析中的影響，以取得超過平均水準的深入分析。長條圖會顯示客戶行為、訪客參與度、技術效能和表單錯誤等的資料模式，促使在 Adobe Workspace 中實現更深入的分析和明智的決策。 |
 | 2023 年 9 月 | [專案內部或外部的連結](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/visualizations/linking-inside-or-outside-of-your-project.html) | 影片 | 了解如何在您的 [!UICONTROL Analysis Workspace] 專案中建立內部或外部連結。 |
@@ -227,7 +228,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 
 針對 [!DNL Customer Journey Analytics] 發佈的新影片、教學課程或課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 9 月 | [使用資料字典](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/components/data-dictionary/use-data-dictionary.html) | 影片 | 了解適用於 Customer Journey Analytics 之 Analysis Workspace 中的[!UICONTROL 資料字典]。 |
 | 2023 年 9 月 | [Analysis Workspace 概觀](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/analysis-workspace/workspace-projects/analysis-workspace-overview.html) | 影片 | 了解有關在 Analysis Workspace 中用來建立專案和儀表板的基本元件；Analysis Workspace 是靈活、自由格式的分析環境，用來探索和視覺化 Experience Platform 中的資料。 |
@@ -318,13 +319,13 @@ _新功能_
 
 ### [!DNL Experience Manager Assets] as a [!DNL Cloud Service]
 
-_Assets 視圖中的新功能_
+_資產檢視中的新功能_
 
 * **從資料來源大量匯入資產** – 管理員現在可以將資料來源的[多個資產匯入](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/assets-view/bulk-import-assets-view.html?lang=zh-Hant) AEM Assets。管理員不再需要將個別資產或資料夾上傳到 AEM Assets。支援大量匯入的資料來源包括 Azure、AWS、Google 雲端和 Dropbox。
 * **由 Adobe Express 提供技術支援的影像編輯工具** – 簡單直觀的[影像編輯工具是由 Adobe Express 提供技術支援，](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/assets-view/edit-images-assets-view.html?lang=zh-Hant)可直接在 AEM Assets 中使用，以增加內容重複使用性並加快內容流通速度。
 * **為「我的工作區」的「快速存取」釘選項目時的靈活性** – 能夠為您的組織或群組清單選擇和釘選項目，以便它們顯示在[「我的工作區」的「快速存取」部分](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/assets-view/my-workspace-assets-view.html?lang=zh-Hant)。
 
-_管理員視圖中的新功能_
+_管理員檢視中的新功能_
 
 * 現在起，管理員可以[設定您執行搜尋時顯示之資產的批次大小](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/manage/search-assets.html?lang=zh-Hant#configure-asset-batch-size)。您進一步向下捲動載入結果時，資產搜尋結果將以設定的批次大小數字的倍數顯示。系統有 200、500 和 1000 個資產的批次大小供您選擇。設定較低的批次大小數字時，搜尋回應時間會更快。
 * Experience Manager Assets 現在包含 `damAssetLucene` 索引的全新版本 9。`damAssetLucene-9` 將 Oak Query 面向計數的行為變更為[不再對基本搜尋索引傳回的面向計數評估存取控制](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/manage/search-assets.html?lang=zh-Hant)，因此搜尋回應時間會更快。
@@ -338,13 +339,13 @@ _搶鮮版管道的新功能_
 
 _新功能_
 
-* **[Google reCAPTCHA 企業支援](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/add-components-to-an-adaptive-form/captcha-adaptive-forms.html?lang=zh-Hant)** – 以最適化表單使用 Google reCAPTCHA 企業版，為防止詐欺活動和垃圾郵件提供增強的保護，進而提供更安全的用戶體驗。透過進階的風險分析和緊密整合，真實的使用者可輕鬆地提交表單，同時有效地封鎖機器人。
+* **[Google reCAPTCHA 企業支援](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/add-components-to-an-adaptive-form/captcha-adaptive-forms.html?lang=zh-Hant)** – 以調適型表單使用 Google reCAPTCHA 企業版，為防止詐欺活動和垃圾郵件提供增強的保護，進而提供更安全的用戶體驗。透過進階的風險分析和緊密整合，真實的使用者可輕鬆地提交表單，同時有效地封鎖機器人。
 
 _搶鮮版管道的新功能_
 
 * **Adobe Analytics 與適用於表單的 Experience Cloud Setup Automation** – 現在起，輕按幾個按鈕即可啟用 Adobe Analytics 和 Experience Cloud Setup Automation。這可讓您能夠連結 [!DNL AEM Forms as a Cloud Service] 與 Experience Platform 標籤和 Adobe Analytics，以擷取和追蹤已發佈表單的效能指標。
-* **適用於最適化表單的 Adobe Analytics 報告範本** – [!DNL Forms as a Cloud Service] 現在提供現成可用的 Adobe Analytics 報告。這有助於輕鬆了解表單的效能。表單層級的指標可讓您深入了解表單在多個關鍵績效指標 (KPI) 上的表現，例如轉譯、訪客、提交和平均填寫時間。透過追蹤使用者行為和意見回饋，您可以識別表單中造成混亂的部分，並引導表單在設計和功能方面的改善。
-* [[!UICONTROL 最適化表單]中以核心元件為主的表單片段](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/adaptive-form-fragments-core-components.html?lang=zh-Hant) – 告別重複資料、最佳化您的數位目錄，並隨著使用[!UICONTROL 表單片段]提升表單建立體驗來提升共同作業。這些可重複使用的元件會無縫整合到多個表單中，讓您更輕鬆建立一致且具有專業外觀的表單。[!UICONTROL 表單片段]透過&#x200B;_一次變更，處處反映_&#x200B;功能可確保再使用性、標準化和品牌一致性。在一處進行的更新會自動傳播到使用這些片段的所有表單，因此可體驗更高的可維護性和效率。
+* **適用於調適型表單的 Adobe Analytics 報告範本** – [!DNL Forms as a Cloud Service] 現在提供現成可用的 Adobe Analytics 報告。這有助於輕鬆了解表單的效能。表單層級的指標可讓您深入了解表單在多個關鍵績效指標 (KPI) 上的表現，例如轉譯、訪客、提交和平均填寫時間。透過追蹤使用者行為和意見回饋，您可以識別表單中造成混亂的部分，並引導表單在設計和功能方面的改善。
+* [[!UICONTROL 調適型表單]中以核心元件為主的表單片段](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/adaptive-form-fragments-core-components.html?lang=zh-Hant) – 告別重複資料、最佳化您的數位目錄，並隨著使用[!UICONTROL 表單片段]提升表單建立體驗來提升共同作業。這些可重複使用的元件會無縫整合到多個表單中，讓您更輕鬆建立一致且具有專業外觀的表單。[!UICONTROL 表單片段]透過&#x200B;_一次變更，處處反映_&#x200B;功能可確保再使用性、標準化和品牌一致性。在一處進行的更新會自動傳播到使用這些片段的所有表單，因此可體驗更高的可維護性和效率。
 * [增強 Acrobat Sign Workflow 步驟](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/create-form-centric-workflows/aem-forms-workflow-step-reference.html?lang=zh-Hant#sign-document-step-sign-document-step) – [!DNL Acrobat Sign] Workflow 步驟已強化，以納入以下內容：
 
    * **Acrobat Sign 以政府機關身分證件為主的驗證** – Acrobat Sign 以政府機關身分證件為主的驗證，讓使用者能夠使用政府機關核發的身分證件 (駕照、國民身分證、護照) 驗證其身分，提供多一層的驗證功能。此增強功能利用受信任的身分識別文件為簽名過程額外增加一層可信度，使其成為需要增強安全性、合規性和使用者驗證等情境的理想選擇。
@@ -355,9 +356,9 @@ _搶鮮版管道的新功能_
 * **通訊 API 中的頁數支援** – 現在，除了透過通訊 API 擷取文件之外，您也可以接收有關文件內所含頁數的重要資訊。
 * [在規則編輯器中使用自訂錯誤處理常式進行錯誤處理](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/add-custom-error-handler-adaptive-forms-core-components.html?lang=zh-Hant) – 您現在可以叫用自訂函數來回應外部服務傳回的錯誤，並為一般使用者提供量身打造的回應。例如，您可以針對特定錯誤程式碼在後端叫用自訂工作流程，或通知客戶服務已關閉。
 
-### Headless 最適化表單早期採用者計劃
+### Headless 調適型表單早期採用者計劃
 
-使用 [Headless 最適化表單](https://experienceleague.adobe.com/docs/experience-manager-headless-adaptive-forms/using/overview.html?lang=zh-Hant)可讓開發人員建立、發佈和管理可透過 API 存取和互動的互動式表單，而不是透過傳統的圖形使用者介面。Headless 最適化表單可協助您：
+使用 [Headless 調適型表單](https://experienceleague.adobe.com/docs/experience-manager-headless-adaptive-forms/using/overview.html?lang=zh-Hant)可讓開發人員建立、發佈和管理可透過 API 存取和互動的互動式表單，而不是透過傳統的圖形使用者介面。Headless 調適型表單可協助您：
 
 * 使用您選擇的程式語言建置高品質的多管道表單
 * 以原生方式將表單整合到您的桌面和行動應用程式、網站和聊天應用程式
@@ -385,9 +386,9 @@ _新功能_
 * 將內容設定為[複製內容時，使用者介面中的內容集現在可允許內容感知設定](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developing/configurations.html?lang=zh-Hant)。
 * 已進行增強，以提升 Cloud Manager 使用者介面中錯誤訊息的可理解性和顯示效果。
 
-_早期採用計劃_
+_早期採用者計劃_
 
-參加 Adobe 的早期採用計劃，就有機會測試一些即將推出的功能。
+參加 Adobe 的早期採用者計劃，就有機會測試一些即將推出的功能。
 
 * **自助服務內容還原** – [新的自助服務內容還原功能](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/operations/restore.html?lang=zh-Hant)現在會提供最多七天的備份還原，而且可供早期採用者用於評估目的，且具備以下特色：
 
@@ -472,7 +473,7 @@ _已知問題_
 
 已發佈的 Experience Manager 新影片、教學課程或其他課程。
 
-| 已發佈 | 應用程式 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | ----------| ---------- | ---------- | ---------- |---------- |
 | 2023 年 9 月 | AEM Foundation | [使用 ModSecurity 保護您的 AEM 網站免受 DoS 攻擊](https://experienceleague.adobe.com/docs/experience-manager-learn/foundation/security/modsecurity-crs-dos-attack-protection.html) | 影片 | 了解如何使用 Adobe Experience Manager (AEM) Publish Dispatcher 上的 OWASP ModSecurity 核心規則集 (CRS) 啟用 ModSecurity，以保護您的網站免受阻斷服務 (DoS) 攻擊。 |
 | 2023 年 9 月 | AEM Foundation | [在 AEM 中使用 SSL 精靈](https://experienceleague.adobe.com/docs/experience-manager-learn/foundation/security/use-the-ssl-wizard.html) | 影片 | 了解如何使用內建的 SSL 精靈在 Adobe Experience Manager 中設定 SSL，使其在 HTTPS 上執行。 |
@@ -488,7 +489,7 @@ _已知問題_
 
 [!DNL Experience Manager] 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
 | 2023 年 8 月 | [無法選取  [!DNL Adobe Target]  做為 Cloud 解決方案 (針對  [!DNL IMS]  設定](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22693.html)) | 新文章 | 了解嘗試建立 [!DNL Adobe Target IMS] 設定以整合 [!DNL AEM] 與 [!DNL Adobe Target] 時傳回錯誤的解決方案。 |
 | 2023 年 8 月 | [[!DNL Adobe Experience Manager]：如何在頁面縮圖的「選取影像」中啟用搜尋列](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22690.html) | 新文章 | 了解如何在頁面縮圖的「選取影像」中啟用搜尋列。 |
@@ -541,7 +542,7 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 在 Experience League 上尋找 [!DNL Adobe Commerce] 的新教學課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 9 月 | [B2B 銷售報價條列項目折扣](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/b2b/b2b-quote/quote-line-item-notes.html?lang=zh-Hant) | 影片 | 了解如何使用 Adobe Commerce B2B 報價的條列項目備註。 |
 | 2023 年 9 月 | [「即時搜尋」推薦內容](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/marketing/live-search-recommendations.html) | 影片 | 了解如何將產品推薦的「即時搜尋」新增到您的商店，並提供極為引人入勝、相關且個人化的購物體驗。 |
@@ -555,7 +556,7 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 Adobe Commerce 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
 | 2023 年 8 月 | [[!DNL Quality Patches Tool (QPT)]](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/support-tools/patches/patches-available-in-qpt-tool-overview.html) | 新文章 | 關於如何套用 [!DNL QPT] 1.1.34、[!DNL QPT] 1.1.35 與 [!DNL QPT] 1.1.36 中可用之修補程式的新文章已發佈，而且可以在其各自區段中找到。 |
 | 2023 年 8 月 | [[!DNL USPS Ground Advantage] 運送方式支援 Hotfix (適用於  [!DNL AC-9182])](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/known-issues-patches-attached/usps-ground-advantage-shipping-method-support-hotfix-for-ac-9182.html) | 新文章 | 了解可在 Adobe Commerce 2.4.4 - 2.4.6-p2 中解決 [!DNL AC-9182] (新 [!DNL USPS Ground Advantage] 運送方式) 問題的修補程式。 |
@@ -597,7 +598,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 * Campaign Standard：[發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant)
 
-* Campaign Classic v7.3.4：[版本注意事項](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant)
+* Campaign Classic v7.3.4：[發行說明](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant)
 
 * 控制面板：[發行說明](https://experienceleague.adobe.com/docs/control-panel/using/release-notes/release-notes.html?lang=zh-Hant)
 
@@ -608,14 +609,14 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 [!DNL Campaign] 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
 | 2023 年 8 月 | [[!DNL Error: "URL-140005 Unable to decode URLs of schema ' https'. Not implemented"]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22594.html) | 新文章 | 了解登入 [!DNL ACC (Adobe Campaign Classic)] 帳戶時出現錯誤的解決方案。 |
 | 2023 年 8 月 | [[!DNL Adobe Campaign Classic: 'Feedback_loop_'] 退回，因為電子郵件傳送失敗](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22531.html) | 新文章 | 了解因電子郵件傳送失敗而退回 [!DNL 'Feedback_loop_'] 的解決方案。 |
 | 2023 年 8 月 | [將傳遞內容傳送給不在資料庫中的收件者時發生錯誤](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22570.html) | 新文章 | 了解解決方法：透過外部檔案嘗試傳送傳遞內容給未儲存在資料庫 ([!DNL DB]) 中的收件者時，在傳遞準備期間擲出錯誤。 |
 | 2023 年 8 月 | [手動複製資料庫快照](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22530.html) | 新文章 | 了解如何建立資料庫快照的手動副本。 |
 | 2023 年 8 月 | [Admin 使用者未收到 [!DNL OOTB ffdaReplicateStagingData] 工作流程的錯誤通知](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22525.html) | 新文章 | 了解解決方案：身為 Admin 使用者，在 [!DNL OOTB ffdaReplicateStagingData] 工作流程發生錯誤時未收到通知。 |
-| 2023 年 8 月 | [[!DNL Campaign Classic]: error enriching [!DNL BigQuery] 資料](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22687.html) | 新文章 | 了解解決方案：建立從 [!DNL BigQuery] 視圖讀取資料的工作流程，然後透過 [!DNL ACC] 表格新增豐富活動以擴充資料時，執行工作流程錯誤。 |
+| 2023 年 8 月 | [[!DNL Campaign Classic]: error enriching [!DNL BigQuery] 資料](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22687.html) | 新文章 | 了解解決方案：建立從 [!DNL BigQuery] 檢視讀取資料的工作流程，然後透過 [!DNL ACC] 表格新增豐富活動以擴充資料時，執行工作流程錯誤。 |
 
 {style="table-layout:auto"}
 
@@ -642,13 +643,13 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 針對 Adobe [!DNL Journey Optimizer] 發佈的新影片、教學課程或課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 9 月 | [管理、編寫和使用片段](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/email-channel/manage-author-use-fragments.html) | 影片 | 瞭解如何在 Adobe Journey Optimizer 中管理、編寫和使用片段。 |
-| 2023 年 9 月 | [網頁編輯器中的單頁應用程式(SPA)支援](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/web-channel/singel-page-application-support.html) | 影片 | 瞭解如何在Journey Optimizer網頁編輯器中編寫單頁應用程式(SPA)。 |
-| 2023 年 9 月 | [頻道層級報表](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/report-and-monitor/channel-level-reports.html) | 影片 | 瞭解如何在頻道層級存取、導覽和匯出報告。 |
-| 2023 年 9 月 | [以CSV格式匯出報表](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/report-and-monitor/export-reports-in-csv-format.html) | 影片 | 瞭解如何下載適用於單一報表和單一Widget的CSV報表。 |
-| 2023 年 9 月 | [網頁編輯器中的單頁應用程式(SPA)支援](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/web-channel/singel-page-application-support.html) | 影片 | 瞭解如何在Journey Optimizer網頁編輯器中編寫單頁應用程式(SPA)。 |
+| 2023 年 9 月 | [管理、編寫和使用片段](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/email-channel/manage-author-use-fragments.html) | 影片 | 了解如何在 Adobe Journey Optimizer 中管理、編寫和使用片段。 |
+| 2023 年 9 月 | [網頁編輯器中的單頁應用程式 (SPA) 支援](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/web-channel/singel-page-application-support.html) | 影片 | 了解如何在 Journey Optimizer 網頁編輯器中編寫單頁應用程式 (SPA)。 |
+| 2023 年 9 月 | [頻道層級報告](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/report-and-monitor/channel-level-reports.html) | 影片 | 了解如何存取、導覽和匯出頻道層級的報告。 |
+| 2023 年 9 月 | [以 CSV 格式匯出報告](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/report-and-monitor/export-reports-in-csv-format.html) | 影片 | 了解如何針對報告和單一 Widget 下載 CSV 報告。 |
+| 2023 年 9 月 | [網頁編輯器中的單頁應用程式 (SPA) 支援](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/web-channel/singel-page-application-support.html) | 影片 | 了解如何在 Journey Optimizer 網頁編輯器中編寫單頁應用程式 (SPA)。 |
 | 2023 年 9 月 | [在歷程中建立應用程式內訊息](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/in-app-channel/create-an-in-app-message-in-a-journey.html) | 影片 | 了解何謂應用程式內訊息，以及在歷程中套用的方式。 了解如何在歷程中建立應用程式內訊息，以及測試和發佈歷程的方式。 |
 
 {style="table-layout:auto"}
@@ -701,7 +702,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 
 針對 Adobe Marketo 發佈的新影片、教學課程或其他課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 9 月 | [如何稽核繼承的 Marketo Engage 執行個體](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/fundamentals/inherted-instance-audit.html) | 影片 | 了解執行個體中的內容，並建立可更新設定的行動計畫。此教學課程涵蓋 Marketo Engage 中最重要的部分，包括管理、行銷活動、設計工作室和資料庫，並在其中提供稽核和最佳化的技巧。 |
 
@@ -721,7 +722,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 
 在 Experience League 上找到全新 [!DNL Workfront] 教學課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 9 月 | [Workfront 教學課程的新內容](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/home.html?lang=zh-Hant#what%E2%80%99s-new%3F) | 多部影片 | 檢視上一個月推出的最新教學課程。 |
 
@@ -731,7 +732,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 
 [!DNL Workfront] 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 8 月 | [無法在校訂中增加新版本](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22747.html) | 新文章 | 了解解決方案：嘗試將新版本的校訂上傳到現有校訂時出現錯誤。 |
 
@@ -778,7 +779,7 @@ Last updated: **August 9, 2022**
 >
 >_[!DNL Adobe Primetime]_現在稱為_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您近期可能會在文件中看到這兩個品牌名稱。
 
-請參閱 [Adobe Pass 版本注意事項](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html)以找到特定版本的資訊、系統需求、限制、已修正的問題和已知問題。
+請參閱 [Adobe Pass 發行說明](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html)以找到特定版本的資訊、系統需求、限制、已修正的問題和已知問題。
 
 ## ![圖示](/assets/document-cloud-24.png) [!DNL Document Cloud] {#doc-cloud}
 
@@ -790,7 +791,7 @@ Last updated: **August 9, 2022**
 
 +++詳細資訊
 
-| 已發佈 | 應用程式 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |---------- |
 | 2023 年 9 月 | Acrobat Sign | [隨時隨地簽署文件](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/mobile/mobile-tutorials/sign-mobile.html?lang=zh-Hant) | 影片 | 了解如何使用適用於 iOS 或 Android™ 的 Acrobat Sign 行動應用程式簽署文件。 |
 | 2023 年 9 月 | Acrobat Sign | [Microsoft® Dynamics 365 for Sales](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/integrations/microsoft/dynamics-sales.html) | 影片 | 了解如何使用 Acrobat Sign 和 Microsoft® Dynamics 365 for Sales 自動執行銷售報價簽署流程。在此範例中，Microsoft® Dynamics 365 for Sales 協助 [!DNL Contoso] 的銷售團隊透過單一客戶檢視與整合的簽署流程，更快速地在完成交易並善加利用商機。 |
@@ -824,6 +825,6 @@ Last updated: **August 9, 2022**
 
 [數位體驗藍圖](https://experienceleague.adobe.com/docs/blueprints-learn/architecture/overview.html)是可重複的實施，可讓您處理策略，並快速解決既定的業務問題。每個藍圖都提供一系列成品，解釋高價值業務問題、架構、實施步驟、技術考量以及相關文件的連結。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 9 月 | [Experience Cloud 架構圖](https://experienceleague.adobe.com/docs/blueprints-learn/architecture/architecture-overview/experience-cloud.html) | 文章 | 了解 Experience Cloud 應用程式、應用程式服務和 Experience Platform 如何融入企業行銷架構。 |
